Initial commit - InkWell digital journaling platform

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,9 +1,5 @@
 {
   "projects": {
-    "default": "inkwell-alpha",
-    "inkwell-alpha": "inkwell-alpha",
-    "inkwellwebapp": "inkwell-alpha"
-  },
-  "targets": {},
-  "etags": {}
+    "default": "inkwell-alpha"
+  }
 }
