--- a/firebase.json
+++ b/firebase.json
@@ -19,5 +19,17 @@
       }
     ],
     "cleanUrls": true
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099,
+      "import": "./emulator-data/auth"
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "ui": {
+      "enabled": true
+    }
   }
 }
