--- a/functions/package.json
+++ b/functions/package.json
@@ -10,14 +10,16 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
-    "@pinecone-database/pinecone": "^6.0.0",
     "@sendgrid/mail": "^8.1.5",
+    "busboy": "^1.6.0",
+    "cors": "^2.8.5",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
