Add debug logs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ functions/node_modules/
 # Firebase
 .firebase/
 firebase-debug.log" > .gitignore
+# Debug logs
+firebase-debug*.log
+firestore-debug.log
