--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,8 @@
     "cors": "^2.8.5",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "twilio": "^5.10.4"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
