--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "node-fetch": "^2.7.0",
+    "stripe": "^17.5.0",
     "twilio": "^5.10.4"
   },
   "devDependencies": {
