Admin: Beta progress tracking, fixed practitioners query
- Added Beta Progress tab with Week 1/2/3 tracking
- Fixed practitioners query to check both accountType and userRole
- Added promote to Alpha functionality with perks (6mo free, 50% discount)
- Added tier override for testing
- Added beta reminder system (placeholder)

--- a/firebase.json
+++ b/firebase.json
@@ -14,11 +14,22 @@
     ],
     "rewrites": [
       {
-        "source": "!/migrate-users.html",
+        "source": "!/@(migrate-users|practitioner-portal|practitioner-register|admin|admin-enhanced|app|coach).html",
         "destination": "/index.html"
       }
     ],
-    "cleanUrls": true
+    "cleanUrls": true,
+    "headers": [
+      {
+        "source": "**/*.@(html|js)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
+      }
+    ]
   },
   "emulators": {
     "auth": {
